--- a/style.css
+++ b/style.css
@@ -50,9 +50,15 @@ html.body{
     background-position: center;
 
 }
-
+.painting-section{
+    width: 50%;
+}
  .services{ 
     display: flex;
+    width: 100%;
+    margin-left: 10%;
+    margin-right: 10%;
+
 }
 @media only screen and (max-width: 600px) { 
     /* for tablets and mobile */
