--- a/style.css
+++ b/style.css
@@ -45,11 +45,22 @@ html.body {
       background-repeat: no-repeat;
     }
   }
-  /* @media only screen and (min-width: 400px) { 
+  @media only screen and (min-width: 400px) {
     /* for tablets and mobile */
-  .img-engineer {
+    .img-engineer {
+      width: 100%;
+      background-size: 100%;
+      background-repeat: no-repeat;
+    }
+  }
+}
+@media only screen and (min-width: 400px) {
+  /* for tablets and mobile */
+  .bg-primary {
     width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
   }
 }
+
+
