--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ html.body {
       background-repeat: no-repeat;
     }
   }
-  /* @media only screen and (min-width: 700px) { 
+  /* @media only screen and (max-width: 700px) { 
     /* for tablets and mobile */
   .img-engineer {
     width: 100%;
