--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ html.body {
       width: 100%;
       background-size: 100%;
       background-repeat: no-repeat;
+       max-height: 240px;
     }
   }
    @media only screen and (max-width: 700px) { 
@@ -51,6 +52,7 @@ html.body {
     width: 100%;
     background-size: 100%;
     background-repeat: no-repeat;
+     max-height: 240px;
   }
 }
 
