--- a/style.css
+++ b/style.css
@@ -55,4 +55,12 @@ html.body {
      max-height: 240px;
   }
 }
+  @media only screen and (max-width: 700px) {
+  /* for tablets and mobile */
+  .bg-primary {
+    width: 100%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
 
