--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ html.body {
   height: 100vh;
   background-position: center;
 }
+ .bg-primary {
+    width: 100%;
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
 
 @media only screen and (max-width: 600px) {
   /* for tablets and mobile */
