--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ html.body {
 }
  .bg-primary {
     width: 100%;
+    height: 100vh;
     background-size: 100%;
     background-repeat: no-repeat;
   }
